@@ -1,5 +1,5 @@
 <?php
-/* $Id$
+/* $Id: gallery.header.default 17899 2008-08-23 13:31:09Z JensT $
  *
  * This is the default stats header (for the stats results page: stats.php).
  *
